# glacier-manager

./: .gitignore  Makefile  README.md  app.py  consts.py  docker-compose.yaml  models.py  pyproject.toml  schemas.py
backend/: consts.py  main.py  models.py
backend/core/: aws.py  db.py  utils.py
backend/core/routes/: vaults.py
backend/routes/: configs.py  inventories.py  vaults.py
core/: aws.py  db.py
routes/: configs.py  vaults.py
