[tool.poetry]
name = "glacier-manager"
version = "0.1.0"
description = ""
authors = ["Dadonas <danilo.freitas@luizalabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.4"}
boto3 = "^1.35.45"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
